# fvp-unpacker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
fvp-unpacker-cli/: Cargo.toml
fvp-unpacker-cli/src/: cli.rs  main.rs  utils.rs
fvp-unpacker-cli/src/commands/: list.rs  mod.rs  tachie.rs  unpack.rs
fvp-unpacker-core/: Cargo.toml
fvp-unpacker-core/src/: error.rs  lib.rs  prelude.rs
fvp-unpacker-core/src/archive/: bin.rs  hzc.rs  mod.rs
fvp-unpacker-core/src/utils/: encoding.rs  fread.rs  mod.rs  sread.rs
fvp-unpacker-core/tests/: archive_bin.rs
