[package]
name = "fvp-unpacker-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
bytemuck = { version = "1.22.0", features = ["extern_crate_alloc"] }
encoding_rs = "0.8.35"
rgb = "0.8.50"
imgref = "1.11.0"
png = "0.17.16"

[dependencies.flate2]
version = "1.1.0"
default-features = false
features = ["zlib-ng"]
