[package]
name = "fvp-unpacker-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc"] }
encoding_rs = "0.8.35"
rgb = "0.8.52"
imgref = "1.12.0"
png = "0.18.0"

[dependencies.flate2]
version = "1.1.5"
default-features = false
features = ["zlib-ng"]
